--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "next": "13.3.1",
+    "next-sanity": "^4.2.0",
     "nodemailer": "^6.9.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
